# sp_vision

./: .gitignore  CMakeLists.txt  Quickstart.md  autostart_abondoned.sh  readme.md  stress_test_compile.sh
calibration/: calibrate_handeye.cpp  capture.cpp
configs/: ascento.yaml  calibration.yaml  camera.yaml  demo.yaml  mvs.yaml  sentry.yaml  sentry_blue.yaml  standard.yaml  standard3.yaml  standard4.yaml  uav.yaml
io/: CMakeLists.txt  cboard.cpp  cboard.hpp  command.hpp  socketcan.hpp
io/dm_imu/: dm_imu.cpp
io/gimbal/: gimbal.cpp  gimbal.hpp
io/mindvision/: mindvision.cpp
io/ros2/: CMakeLists.txt  publish2nav.cpp  publish2nav.hpp  ros2.cpp  ros2.hpp  subscribe2nav.cpp  subscribe2nav.hpp
io/ros2/msg/: EKF.msg
io/serial_phoenix/include/: serial.hpp
src/: standard.cpp  standard_mpc.cpp  standard_mpc_se.cpp  uav.cpp
tasks/auto_aim/: aimer.cpp  aimer.hpp  armor.hpp  detector.cpp  shooter.cpp  target.cpp  target.hpp  tracker.cpp  tracker.hpp  yolo.hpp
tasks/auto_aim/planner/: planner.cpp
tasks/auto_aim/yolos/: yolo11.cpp  yolov5.cpp  yolov5.hpp  yolov8.cpp
tasks/auto_buff/: buff_aimer.cpp
tests/: camera_detect_test.cpp  camera_track_test.cpp  detector_video_test.cpp  frame_delta_stats.cpp  minimum_vision_system.cpp  play_loop.cpp  shoot_video.cpp  subscribe_test.cpp  tracker_test.cpp
tools/: plotter.hpp  tune_exposure.cpp
